--- a/cloud-provider-payment/src/main/resources/application.yml
+++ b/cloud-provider-payment/src/main/resources/application.yml
@@ -2,4 +2,17 @@ server:
   port: 8001
 spring:
   application:
-    name: payment
+    name: payment-service
+
+  datasource:
+    # 当前数据源操作类型
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql://localhost:3306/db2019?useUnicode=true?&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: 123456
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  # 所有entity别名类所在包
+  type-aliases-package: com.niici.springcloud.entity
