--- a/cloud-provider-payment/src/main/resources/application.yml
+++ b/cloud-provider-payment/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8001
+  servlet:
+    context-path: /payment
 spring:
   application:
     name: payment-service
@@ -8,9 +10,9 @@ spring:
     # 当前数据源操作类型
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/db2019?useUnicode=true?&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: 123456
+    url: jdbc:mysql://192.168.18.164:3306/learn?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: admin
+    password: admin
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
