--- a/cloud-provider-payment/pom.xml
+++ b/cloud-provider-payment/pom.xml
@@ -66,6 +66,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
         </dependency>
+
+        <!-- 引入common依赖       -->
+        <dependency>
+            <groupId>com.niici.springcloud</groupId>
+            <artifactId>cloud-commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
