--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <modules>
     <module>cloud-provider-payment</module>
     <module>cloud-consumer-order</module>
+      <module>cloud-commons</module>
   </modules>
   <packaging>pom</packaging>
 
