--- a/cloud-consumer-order/pom.xml
+++ b/cloud-consumer-order/pom.xml
@@ -45,7 +45,7 @@
         <dependency>
             <groupId>com.niici.springcloud</groupId>
             <artifactId>cloud-commons</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
