--- a/cloud-provider-payment/src/main/resources/application.yml
+++ b/cloud-provider-payment/src/main/resources/application.yml
@@ -18,3 +18,12 @@ mybatis:
   mapper-locations: classpath:mapper/*.xml
   # 所有entity别名类所在包
   type-aliases-package: com.niici.springcloud.entity
+eureka:
+  client:
+    # true 表示将自己注册到eurekaServer
+    register-with-eureka: true
+    # true 表示从eurekaServer拉取服务，默认为true，单节点无所谓，集群必须设置为true才能配置ribbon使用，实现负载均衡+6099999999999999
+    fetch-registry: true
+    service-url:
+      # eureka服务默认地址
+      defaultZone: http://localhost:7001/eureka
