--- a/cloud-consumer-order/src/main/resources/application.yml
+++ b/cloud-consumer-order/src/main/resources/application.yml
@@ -5,3 +5,12 @@ server:
 spring:
   application:
     name: order-service
+
+eureka:
+  client:
+    # 注册至eureka
+    register-with-eureka: true
+    # 拉取eureka中的服务
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka
