--- a/cloud-eureka-server/src/main/resources/application.yml
+++ b/cloud-eureka-server/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 eureka:
   instance:
     # eureka 服务端的实例名称
-    hostname: localhost
+    hostname: eurekaServer.com
   client:
     # false表示不向注册中心注册自己
     register-with-eureka: false
@@ -11,5 +11,8 @@ eureka:
     fetch-registry: false
     service-url:
       # 设置与eureka server交互的地址，查询服务和注册服务都使用这个地址
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
+      # defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka
+      # 配置eureka集群，见cloud-eureka-server-slave中的yml文件描述
+      defaultZone: http://eurekaServerSlave.com:7002/eureka
+
 
