1. payment服务集群ok； 2. order服务注册到eureka ok； 3. 使用@LoadBalanced注解，实现order服务调用payment服务时，实现负载均衡；

--- a/cloud-consumer-order/src/main/resources/application.yml
+++ b/cloud-consumer-order/src/main/resources/application.yml
@@ -13,4 +13,5 @@ eureka:
     # 拉取eureka中的服务
     fetch-registry: true
     service-url:
-      defaultZone: http://localhost:7001/eureka
+      # defaultZone: http://localhost:7001/eureka
+      defaultZone: http://eurekaServer.com:7001/eureka, http://eurekaServerSlave.com:7001/eureka
