--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>cloud-provider-payment</module>
+    <module>cloud-provider-payment-slave</module>
     <module>cloud-consumer-order</module>
     <module>cloud-commons</module>
     <module>cloud-eureka-server</module>
