1. eureka服务端禁用自我保护ok； 2. order服务配置心跳间隔和心跳超时时间ok； 3. payment服务和order服务配置，在eureka中显示的服务名称ok；

--- a/cloud-eureka-server-slave/src/main/resources/application.yml
+++ b/cloud-eureka-server-slave/src/main/resources/application.yml
@@ -15,3 +15,8 @@ eureka:
       # 3. 修改yml文件，互相注册，eurekaServer注册到eurekaServerSlave上，eurekaServerSlave注册到eurekaServer上
       # defaultZone: http://eurekaServer.com:7001/eureka   defaultZone: http://eurekaServerSlave.com:7001/eureka
       defaultZone: http://eurekaServer.com:7001/eureka
+  server:
+    # eureka的自我保护配置，关闭后，不可用服务会被立即剔除
+    enable-self-preservation: false
+    # eureka中注册的服务的驱逐间隔
+    eviction-interval-timer-in-ms: 2000
