--- a/cloud-consumer-order/src/main/resources/application.yml
+++ b/cloud-consumer-order/src/main/resources/application.yml
@@ -15,3 +15,13 @@ eureka:
     service-url:
       # defaultZone: http://localhost:7001/eureka
       defaultZone: http://eurekaServer.com:7001/eureka, http://eurekaServerSlave.com:7001/eureka
+  instance:
+    # instance-id 指定注册到eureka的服务名称
+    instance-id: order-service-80
+    # 访问路径可以显示IP地址
+    prefer-ip-address: true
+    # 客户端向eureka注册中心的发送心跳的时间间隔
+    lease-renewal-interval-in-seconds: 1
+    # eureka注册中心和客户端的心跳超时时间间隔，超时将剔除服务
+    lease-expiration-duration-in-seconds: 2
+    # 以上两个参数生产环境勿动
