--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <module>cloud-commons</module>
     <module>cloud-eureka-server</module>
     <module>cloud-eureka-server-slave</module>
+    <module>cloud-zookeeper-payment</module>
   </modules>
   <packaging>pom</packaging>
 
