1. 服务注册至zookeeper ok;

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>cloud-eureka-server</module>
     <module>cloud-eureka-server-slave</module>
     <module>cloud-zookeeper-payment</module>
+      <module>cloud-zookeeper-order</module>
   </modules>
   <packaging>pom</packaging>
 
