--- a/cloud-zookeeper-payment/src/main/resources/application.yml
+++ b/cloud-zookeeper-payment/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8004
+  servlet:
+    context-path: /payment
 
 spring:
   application:
@@ -18,3 +20,12 @@ spring:
       # 指定zookeeper服务的地址，集群使用逗号分隔
       # 注册成功后，可以使用zkCli.sh脚本，通过 ls /services 命令查看已注册的服务
       connect-string: 192.168.18.161:2181, 192.168.18.162:2181, 192.168.18.163:2181
+      # zookeeper注册中心中，显示此服务的端口号以及服务名称
+      discovery:
+        instance-id: payment-service-8004
+        instance-port: 8004
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
+  # 所有entity别名类所在包
+  type-aliases-package: com.niici.springcloud.entity
