1. consul服务注册ok -- consul企业版已被禁用，所有可以不看；

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,8 @@
     <module>cloud-eureka-server</module>
     <module>cloud-eureka-server-slave</module>
     <module>cloud-zookeeper-payment</module>
-      <module>cloud-zookeeper-order</module>
+    <module>cloud-zookeeper-order</module>
+    <module>cloud-consul-payment</module>
   </modules>
   <packaging>pom</packaging>
 
