1. 新增openfeign order服务，采用openfeign方式调用payment提供的服务； 2. 用到注解：@EnableFeignClients 开启openfeign，@FeignClient 声明一个feign客户端并指定调用的服务；

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>cloud-zookeeper-payment</module>
     <module>cloud-zookeeper-order</module>
     <module>cloud-consul-payment</module>
+    <module>cloud.openfeign-order</module>
   </modules>
   <packaging>pom</packaging>
 
