--- a/cloud.openfeign-order/src/main/resources/application.yml
+++ b/cloud.openfeign-order/src/main/resources/application.yml
@@ -25,6 +25,7 @@ feign:
         connectTimeout: 5000
         # 建立连接后, 从服务器读取资源的超时时间
         readTimeout: 5000
+        loggerLevel: FULL
 
 # 配置openfeign日志打印
 logging:
