1. 新增hystrix payment服务和order服务ok； 2. hystrix 使用@EnableCircuitBreaker注解开启熔断支持； 3. hystrix 使用@HystrixCommond注解指定服务降级时调用的fallback方法和其他属性； 4. @EnableCircuitBreaker注解可使用@SpringCloudApplication代替； 5. @SpringCloudApplication注解@EnableCircuitBreaker、@EnableEurekaClient、@SpringBootApplication

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <module>cloud-zookeeper-order</module>
     <module>cloud-consul-payment</module>
     <module>cloud.openfeign-order</module>
+      <module>cloud-hystrix-payment</module>
+      <module>cloud-openfeign-hystrix-order</module>
   </modules>
   <packaging>pom</packaging>
 
