1. payment服务配置熔断 ok； 2. 在@HystrixCommand注解的@HystrixProperty属性中配置：   - circuitBreaker.enabled: 是否开启断路器   - circuitBreaker.requestVolumeThreshold: 滑动窗口中, 最少有多少个请求, 才可能触发熔断   - circuitBreaker.sleepWindowInMilliseconds: 滑熔断后多少时间内直接reject请求, 之后进入half-open状态   - circuitBreaker.errorThresholdPercentage: 异常比例达到多少, 触发熔断

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>cloud.openfeign-order</module>
       <module>cloud-hystrix-payment</module>
       <module>cloud-openfeign-hystrix-order</module>
+      <module>cloud-hystrix-dashboard</module>
   </modules>
   <packaging>pom</packaging>
 
