1. payment服务配置熔断 ok； 2. 在@HystrixCommand注解的@HystrixProperty属性中配置：   - circuitBreaker.enabled: 是否开启断路器   - circuitBreaker.requestVolumeThreshold: 滑动窗口中, 最少有多少个请求, 才可能触发熔断   - circuitBreaker.sleepWindowInMilliseconds: 滑熔断后多少时间内直接reject请求, 之后进入half-open状态   - circuitBreaker.errorThresholdPercentage: 异常比例达到多少, 触发熔断
 1. gateway服务配置OK;
 2. gateway网关服务引入jar包:
  i. <artifactId>spring-cloud-starter-gateway</artifactId>
  ii. 引入gateway依赖后, 无需引入web 和 actuator依赖, 否则依赖冲突, 服务无法启动;
 3. yml文件配置gateway网关路由：
 cloud:
     gateway:
       routes:
         - id: PAYMENT-SERVICE
           uri: http://localhost:8001
           predicates:
             - Path=/payment/query/**
             - Path=/payment/addPayment/**

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
       <module>cloud-hystrix-payment</module>
       <module>cloud-openfeign-hystrix-order</module>
       <module>cloud-hystrix-dashboard</module>
+      <module>cloud-gateway-gateway</module>
   </modules>
   <packaging>pom</packaging>
 
