--- a/cloud-gateway-gateway/src/main/resources/application.yml
+++ b/cloud-gateway-gateway/src/main/resources/application.yml
@@ -10,13 +10,14 @@ spring:
           # 开启从注册中心动态创建路由的功能, 利用微服务名进行路由
           # 通过ip:port/微服务名/url发送请求, 如http://localhost:9527/PAYMENT-SERVICE/payment/query/1
           enabled: true
+          lower-case-service-id: true
       routes:
         - id: route-1   # 路由的ID, 没有固定规则但要求唯一, 建议配合服务名
           #uri: http://localhost:8001  #服务的地址
-          uri: lb://PAYMENT-SERVICE # 启用动态路由后, 提供服务的地址, lb表示loadbalance
+          uri: lb://payment-service # 启用动态路由后, 提供服务的地址, lb表示loadbalance
           predicates:
-            - Path=/payment/query/**  # 断言, 路径相匹配的路由
-            - Path=/payment/addPayment/**
+          - Path=/payment/** # 断言, 路径相匹配的路由
+          - Method=POST
           #filters:
 eureka:
   client:
