1. springboot+sharding-jdbc, 分表插入数据OK;

--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,11 @@
     <module>cloud-zookeeper-order</module>
     <module>cloud-consul-payment</module>
     <module>cloud.openfeign-order</module>
-      <module>cloud-hystrix-payment</module>
-      <module>cloud-openfeign-hystrix-order</module>
-      <module>cloud-hystrix-dashboard</module>
-      <module>cloud-gateway-gateway</module>
+    <module>cloud-hystrix-payment</module>
+    <module>cloud-openfeign-hystrix-order</module>
+    <module>cloud-hystrix-dashboard</module>
+    <module>cloud-gateway-gateway</module>
+    <module>cloud-sharding-jdbc</module>
   </modules>
   <packaging>pom</packaging>
 
